@@ -1,0 +1,116 @@
+Little Registry Cleaner 1.4
+Website: http://sourceforge.net/projects/littlecleaner
+Microsoft Windows NT 6.1.7600.0
+
+Started scan at 08/10/2009 11:38:18 AM
+
+Starting scanning: ActiveX/COM Objects
+Scanning HKEY_CLASSES_ROOT\CLSID for invalid CLSID's
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_CLASSES_ROOT\CLSID\{CAFEEFAC-FFFF-FFFF-FFFF-ABCDEFFEDCBA}\InprocServer32"
+Scanning HKEY_LOCAL_MACHINE\SOFTWARE\Classes\CLSID for invalid CLSID's
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\CLSID\{CAFEEFAC-FFFF-FFFF-FFFF-ABCDEFFEDCBA}\InprocServer32"
+Scanning HKEY_CURRENT_USER\SOFTWARE\Classes\CLSID for invalid CLSID's
+Scanning HKEY_CLASSES_ROOT\Wow6432Node\CLSID for invalid CLSID's
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_CLASSES_ROOT\Wow6432Node\CLSID\{31411198-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_CLASSES_ROOT\Wow6432Node\CLSID\{314111b8-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_CLASSES_ROOT\Wow6432Node\CLSID\{314111c6-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_CLASSES_ROOT\Wow6432Node\CLSID\{314111c7-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_CLASSES_ROOT\Wow6432Node\CLSID\{314111f0-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_CLASSES_ROOT\Wow6432Node\CLSID\{314111f7-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_CLASSES_ROOT\Wow6432Node\CLSID\{31411219-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_CLASSES_ROOT\Wow6432Node\CLSID\{31411228-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_CLASSES_ROOT\Wow6432Node\CLSID\{B089FE88-FB52-11D3-BDF1-0050DA34150D}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_CLASSES_ROOT\Wow6432Node\CLSID\{C430996F-4AA8-4AA8-81DE-F54432CD5786}\InprocServer32"
+Scanning HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Classes\CLSID for invalid CLSID's
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Classes\CLSID\{31411198-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Classes\CLSID\{314111b8-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Classes\CLSID\{314111c6-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Classes\CLSID\{314111c7-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Classes\CLSID\{314111f0-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Classes\CLSID\{314111f7-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Classes\CLSID\{31411219-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Classes\CLSID\{31411228-a502-11d2-bbca-00c04f8ec294}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Classes\CLSID\{B089FE88-FB52-11D3-BDF1-0050DA34150D}\InprocServer32"
+Bad Registry Key Found! Problem: "Unable to find InprocServer32" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Classes\CLSID\{C430996F-4AA8-4AA8-81DE-F54432CD5786}\InprocServer32"
+Scanning HKEY_CLASSES_ROOT for invalid Classes
+Bad Registry Key Found! Problem: "Unused ProgID/File Extension" Path: "HKEY_CLASSES_ROOT\.b5t"
+Bad Registry Key Found! Problem: "Unused ProgID/File Extension" Path: "HKEY_CLASSES_ROOT\.b6t"
+Bad Registry Key Found! Problem: "Unused ProgID/File Extension" Path: "HKEY_CLASSES_ROOT\.bwt"
+Bad Registry Key Found! Problem: "Unused ProgID/File Extension" Path: "HKEY_CLASSES_ROOT\.isz"
+Bad Registry Key Found! Problem: "Missing ProgID reference" Path: "HKEY_CLASSES_ROOT\.wlpginstall"
+Bad Registry Key Found! Problem: "Missing ProgID reference" Path: "HKEY_CLASSES_ROOT\.wlpginstall3"
+Bad Registry Key Found! Problem: "Missing CLSID reference" Path: "HKEY_CLASSES_ROOT\JavaPlugin.FamilyVersionSupport"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxa.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxc.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxd.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxe.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxf.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxh.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxi.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxk.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxq.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxr.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxs.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxt.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxv.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\MSHelp.hxw.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CLASSES_ROOT\ProcMon.Logfile.1\DefaultIcon"
+Scanning HKEY_LOCAL_MACHINE\SOFTWARE\Classes for invalid Classes
+Bad Registry Key Found! Problem: "Unused ProgID/File Extension" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\.b5t"
+Bad Registry Key Found! Problem: "Unused ProgID/File Extension" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\.b6t"
+Bad Registry Key Found! Problem: "Unused ProgID/File Extension" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\.bwt"
+Bad Registry Key Found! Problem: "Unused ProgID/File Extension" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\.isz"
+Bad Registry Key Found! Problem: "Missing ProgID reference" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\.mds"
+Bad Registry Key Found! Problem: "Missing ProgID reference" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\.wlpginstall"
+Bad Registry Key Found! Problem: "Missing ProgID reference" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\.wlpginstall3"
+Bad Registry Key Found! Problem: "Missing CLSID reference" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\JavaPlugin.FamilyVersionSupport"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxa.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxc.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxd.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxe.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxf.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxh.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxi.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxk.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxq.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxr.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxs.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxt.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxv.2.5\DefaultIcon"
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Classes\MSHelp.hxw.2.5\DefaultIcon"
+Scanning HKEY_CURRENT_USER\SOFTWARE\Classes for invalid Classes
+Bad Registry Key Found! Problem: "Unable to find icon" Path: "HKEY_CURRENT_USER\SOFTWARE\Classes\ProcMon.Logfile.1\DefaultIcon"
+Scanning HKEY_CLASSES_ROOT\Wow6432Node for invalid Classes
+Scanning HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Classes for invalid Classes
+Scanning HKEY_CLASSES_ROOT\AppID for invalid AppID's
+Scanning HKEY_LOCAL_MACHINE\SOFTWARE\Classes\AppID for invalid AppID's
+Scanning HKEY_CURRENT_USER\SOFTWARE\Classes\AppID for invalid AppID's
+Scanning HKEY_CLASSES_ROOT\Wow6432Node\AppID for invalid AppID's
+Checking for invalid browser helper objects
+Checking for invalid explorer toolbars
+Checking for invalid explorer extensions
+Checking for invalid explorer file extensions
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\."
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.0-DIGERATI"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.bzrignore"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.csv"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.dtapart"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.eit"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.FBK"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.FTW"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.irp"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.LOG2"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.LTS"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.nlf"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.r87"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.r99"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.s00"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.s02"
+Bad Registry Key Found! Problem: "Unused File Extension" Path: "HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.vdi"
+Finished scanning: ActiveX/COM Objects
+
+Total time elapsed: 19.25 seconds
+Total problems found: 84
+Total objects scanned: 43901
+
+Finished scan at 08/10/2009 11:38:38 AM
