@@ -322,5 +322,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 - Fixed backup directory, it doesnt point to the comman program files once options are changed
 - The backup and logs directory will be in the current directory if the release is portable edition
 - Renamed scanner files to more proper names
+- Uses my own code instead of Type.GetTypeFromProgID()
 
 + Version 1.4 Released
